header section design completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
     <title>My Notes</title>
 </head>
 <body>
-    
+    <header class=" bg-opacity-50 sticky bg-white left-0 right-0 top-0 border-b-2">
+      <div class="navbar">
+        <div class="navbar-start">
+            <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h16M4 18h7" />
+                </svg>
+            </div>
+
+            </div>
+            <img class="w-8 mr-3" src="images/logo.png" alt="note taking logo">
+            <h1 class="uppercase md:text-3xl text-slate-600">note</h1>
+        </div>
+        <div class="navbar-center hidden md:block relative">
+            <input class="input outline-none bg-[#f1f3f4] pl-12 md:w-[400px] lg:w-[700px]" type="search" name="search" id="search" placeholder="Search">
+            <button class="absolute left-4 top-3"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="navbar-end">
+            <button class="btn btn-ghost btn-circle">
+            <i class="fa-solid text-xl fa-arrow-rotate-right"></i>
+            </button>
+            <button class="btn btn-ghost btn-circle">
+            <i class="fa-solid text-xl fa-server"></i>
+            </button>
+            <button  class="btn btn-ghost btn-circle">
+            <i class="fa-solid text-xl fa-gear"></i>
+            </button>
+        </div>
+      </div>
+    </header>
+
+    <main class="max-w-[1200px] mx-auto">
+
+    </main>
 </body>
 </html>
